<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#fff"
    >
    <RelativeLayout
        android:elevation="8dp"
        android:id="@+id/schedule_detail_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_tab_height"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/schedule_detail_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/session_details"
            android:gravity="center"
            style="@style/ToolbarText"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/schedule_detail_back_navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:src="@mipmap/arrow_back"
            />


    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/schedule_detail_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/schedule_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/schedule_detail_title"
                android:textStyle="bold"
                android:textSize="25sp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.drawee.view.GenericDraweeView
                    android:id="@+id/schedule_detail_picture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/schedule_detail_speaker"
                    android:layout_toEndOf="@id/schedule_detail_picture"
                    android:layout_toRightOf="@id/schedule_detail_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/schedule_detail_favourite"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/speaker_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/schedule_detail_speaker_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/schedule_detail_speaker"
                    android:layout_toEndOf="@id/schedule_detail_picture"
                    android:layout_toRightOf="@id/schedule_detail_picture"
                    android:textSize="14sp"
                    android:padding="4dp"
                    android:textColor="#3366BB"
                    android:text="@string/detail_twitter"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="2dp"
                    />

                <TextView
                    android:id="@+id/schedule_detail_speaker_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#3366BB"
                    android:layout_below="@id/schedule_detail_speaker_twitter"
                    android:layout_toEndOf="@id/schedule_detail_picture"
                    android:layout_toRightOf="@id/schedule_detail_picture"
                    android:textSize="14sp"
                    android:padding="4dp"
                    android:text="@string/speaker_url"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="2dp"
                    />

                <TextView
                    android:id="@+id/schedule_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/schedule_detail_speaker_url"
                    android:layout_toEndOf="@id/schedule_detail_picture"
                    android:layout_toRightOf="@id/schedule_detail_picture"
                    android:textSize="14sp"
                    android:text="@string/card_location"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="2dp"
                    android:padding="4dp"
                    />

                <ImageView
                    android:id="@id/schedule_detail_favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="7dp"
                    android:clickable="false"
                    android:src="@mipmap/favourite_36"
                    />

            </RelativeLayout>





            <TextView
                android:id="@+id/schedule_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_description"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:layout_margin="10dp"
                />
        </LinearLayout>



    </ScrollView>


</RelativeLayout>